@@ -2016,7 +2016,7 @@ function hex_grid.spawn_hex_core(surface, position)
     }
 
     for _, e in pairs(entities) do
-        if e.valid and e.type ~= "character" and not lib.is_entity_immune_to_hex_core_clearing(e.name) then
+        if e.valid and not lib.is_entity_immune_to_hex_core_clearing(e) then
             e.destroy()
         end
     end
